fix: several styles changes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>CSS - Drawing Flags</title>
   </head>
   <body>
     <div class="container">
+      <h1 class="title">CSS - Drawing Flags</h1>
       <div class="container__inner">
         <div class="flag flag__japan"></div>
         <div class="flag flag__brazil"></div>
